- changed parser to xpnet
- added xdata classes and xdata controls
- added PresenceManager
- added RosterManager
- added private xml storage (JEP-0049)
- added nested roster groups (JEP-0083)
- rewrote StreamParser.cs
- rewrote ClientSocket.cs

version 0.40
============
- added Start-TLS Support
- added Service Discovery (JEP-0030)
- added RosterManager and PresenceManager for easier roster and presence managing
- added x-conference

version 0.35
============
- added jabber:iq:register for registering new accounts on jabber/xmpp servers
- fixed issues on mono

version 0.34
============
- minor changes in the xml classes
- moved some classes to other namespaces because of vb problems (vb is not case sensitive)
- created new project files for windows, ppc and smartphone
- binaries are included too now

version 0.33
============
- switched from the Mono-Miniparser to my port of kxml, because the Miniparser cant read mixed content xml and text-only nodes

version 0.32
============
- made the xml parser more namespace correct
- added separate classes for SearchItem and RosterItem (Item class is gone)
- added Vcard and VcardIq
- changed some namespaces

version 0.31
============
- small change in Iq.Query proprety
- added server example
- added console client exsample

version 0.30
============
- implemented stream features
- implemented sasl protocol
- sasl plain mechanism
- sasl digest-md5 mechanism
- sasl factory for plugging in new sasl mechanisms
- resource binding
- changed the xml parser ro the sax parser "MiniParser"
- added MessageGrabber for message tracking
- bugfixes

version 0.27
============
- fixes in message, iq and presence for jabberd2

version 0.26
============
- added Error.cs, it handles the old legacy jabber errors and xmpp stanza errors
- Bugfixes in Presence.cs and the parser

version 0.25
============
- added SSL Support using Mono.Security (Doesnt work in the CF)
- created key file for signing the assembly
- improvements to the DOM Parser